--- a/about.html
+++ b/about.html
@@ -60,12 +60,17 @@
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i
                             class="fab fa-twitter fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
+                        href="https://www.facebook.com/share/1GWydnMmsK/?mibextid=wwXIfr"><i
                             class="fab fa-facebook-f fw-normal"></i></a>
                     <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i
                             class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
+                        href="https://www.instagram.com/kilimora.adventure?igsh=cjVjaTV4dTZzZXk2"><i
                             class="fab fa-instagram fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
+                        href="https://www.tiktok.com/@kilimora_adventure?_r=1&_t=ZS-92vfi2bYN0b"><i
+                            class="fab fa-tiktok fw-normal"></i></a>
                     <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle" href=""><i
                             class="fab fa-youtube fw-normal"></i></a>
                 </div>
@@ -555,110 +560,70 @@
     <!-- At Your Service End -->
 
     <!-- Meet Our Team Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-start wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-start pe-3" style="color:#d4a017 !important;">Team</h6>
-                <h1 class="mb-4">Meet Our Team</h1>
-                <p class="mb-5">Meet our diverse team, driven by passion, expertise, and dedication to crafting
-                    unforgettable travel experiences tailored just for you.</p>
-            </div>
-            <div class="row g-4">
-                <!-- Peter -->
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="card border-0 shadow-sm h-100">
-                        <div class="overflow-hidden">
-                            <img class="img-fluid w-100" src="img/pro1.jpg" alt="Peter"
-                                style="height: 250px; object-fit: cover;">
-                        </div>
-                        <div class="card-body p-4">
-                            <h5 class="mb-1">Peter Moshi</h5>
-                            <p class="card-text small">As Director of Kilimora Tour, his goal is to make sure that
-                                tour guides deliver successfully. Peter enjoys the travel business as it allows him to
-                                share experiences, points of views and ideas.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Merlin -->
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="card border-0 shadow-sm h-100">
-                        <div class="overflow-hidden">
-                            <img class="img-fluid w-100" src="img/pro2.jpg" alt="Merlin"
-                                style="height: 250px; object-fit: cover;">
-                        </div>
-                        <div class="card-body p-4">
-                            <h5 class="mb-1">Merlin</h5>
-                            <p class="card-text small">Merlin handles sales. She loves the outdoors and a big fan of
-                                nature. She is loved by our guests for her attentiveness in dealing with customers, fast
-                                responses, and eagerness to help at all times.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Lidya -->
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="card border-0 shadow-sm h-100">
-                        <div class="overflow-hidden">
-                            <img class="img-fluid w-100" src="img/pro3.jpg" alt="Lidya"
-                                style="height: 250px; object-fit: cover;">
-                        </div>
-                        <div class="card-body p-4">
-                            <h5 class="mb-1">Linda</h5>
-                            <p class="card-text small">Linda handles reservations. She is dedicated and loved by her
-                                clients and co-workers. She is very enthusiastic and engaging and goes out of her way to
-                                ensure that clients get the best safari experience.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Margreth -->
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="card border-0 shadow-sm h-100">
-                        <div class="overflow-hidden">
-                            <img class="img-fluid w-100" src="img/pro5.jpg" alt="Margreth"
-                                style="height: 250px; object-fit: cover;">
-                        </div>
-                        <div class="card-body p-4">
-                            <h5 class="mb-1">Margreth</h5>
-                            <p class="card-text small">Margreth is a born leader and very organized. Her clients love
-                                her for being able to find out what they need before they do! Very well commented on
-                                Trip Advisor.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- William -->
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="card border-0 shadow-sm h-100">
-                        <div class="overflow-hidden">
-                            <img class="img-fluid w-100" src="img/pro1.jpg" alt="William"
-                                style="height: 250px; object-fit: cover;">
-                        </div>
-                        <div class="card-body p-4">
-                            <h5 class="mb-1">William</h5>
-                            <p class="card-text small">William is a crowd favorite. Trip Advisor reviews almost never
-                                fails to mention him. Guests are impressed with his attention to details and expertise.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Herman -->
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="card border-0 shadow-sm h-100">
-                        <div class="overflow-hidden">
-                            <img class="img-fluid w-100" src="img/pro2.jpg" alt="Herman"
-                                style="height: 250px; object-fit: cover;">
-                        </div>
-                        <div class="card-body p-4">
-                            <h5 class="mb-1">Herman</h5>
-                            <p class="card-text small">Herman lights up every room with his sense of humor and light
-                                personality. He likes to have small chats and he goes a long way to ensure that you
-                                enjoy your stay.</p>
-                        </div>
-                    </div>
-                </div>
 
+    <!-- Meet Our Team End -->
+
+    <!-- Diana Profile Section Start -->
+    <div id="diana-profile" class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="diana-img-container">
+                        <img class="img-fluid rounded w-100 shadow-lg" src="img/diana-profile.jpg"
+                            alt="Diana - Deputy Director | Kilimora Adventure">
+                        <div class="diana-img-overlay"></div>
+                    </div>
+                </div>
+                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.3s">
+                    <h6 class="section-title bg-white text-start pe-3" style="color:#d4a017 !important;">Leadership Team
+                    </h6>
+                    <h1 class="mb-4">Diana – Deputy Director <span class="text-primary">| Kilimora Adventure</span></h1>
+
+                    <p class="lead mb-4" style="color: #4B2E18; font-weight: 600;">
+                        Serving as Deputy Director and co-founder of Kilimora Adventure, Diana Thomas plays a key role
+                        in guiding the company's operations, reservations, and administrative functions.
+                    </p>
+
+                    <p class="mb-4">
+                        Beyond strategic oversight, she ensures seamless planning and coordination of every safari, from
+                        bookings to logistics, making every guest's experience smooth and exceptional.
+                    </p>
+
+                    <div class="row g-4 mb-4">
+                        <div class="col-md-6">
+                            <div class="d-flex align-items-center">
+                                <div class="btn-lg-square bg-primary rounded-circle me-3">
+                                    <i class="fa fa-tasks text-white user-select-none"></i>
+                                </div>
+                                <div>
+                                    <h5 class="mb-0">Operations</h5>
+                                    <small>Seamless Logistics</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="d-flex align-items-center">
+                                <div class="btn-lg-square bg-primary rounded-circle me-3">
+                                    <i class="fa fa-heart text-white user-select-none"></i>
+                                </div>
+                                <div>
+                                    <h5 class="mb-0">Client Care</h5>
+                                    <small>Exceptional Service</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <p class="mb-0">
+                        With hands-on management of daily operations and a keen eye for detail, she ensures that guests
+                        enjoy world-class service, comfortable accommodations, and extraordinary encounters with
+                        Tanzania's wildlife and landscapes.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-    <!-- Meet Our Team End -->
+    <!-- Diana Profile Section End -->
 
     <!-- Vehicles Start -->
     <div class="container-xxl py-5 bg-light">
@@ -980,11 +945,14 @@
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3">Follow Us</h5>
                     <div class="d-flex gap-3 fs-4">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/share/1GWydnMmsK/?mibextid=wwXIfr"><i
+                                class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/kilimora.adventure?igsh=cjVjaTV4dTZzZXk2"><i
+                                class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-pinterest"></i></a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com/@kilimora_adventure?_r=1&_t=ZS-92vfi2bYN0b"><i
+                                class="fab fa-tiktok"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                         <a href="#"><i class="fab fa-x-twitter"></i></a>
                     </div>
