--- a/destination-ngorongoro.html
+++ b/destination-ngorongoro.html
@@ -107,13 +107,17 @@
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i
                             class="fab fa-twitter fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://www.facebook.com/share/1GWydnMmsK/?mibextid=wwXIfr"><i
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
+                        href="https://www.facebook.com/share/1GWydnMmsK/?mibextid=wwXIfr"><i
                             class="fab fa-facebook-f fw-normal"></i></a>
                     <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i
                             class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://www.instagram.com/kilimora.adventure?igsh=cjVjaTV4dTZzZXk2"><i
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
+                        href="https://www.instagram.com/kilimora.adventure?igsh=cjVjaTV4dTZzZXk2"><i
                             class="fab fa-instagram fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://www.tiktok.com/@kilimora_adventure?_r=1&_t=ZS-92vfi2bYN0b"><i class="fab fa-tiktok fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
+                        href="https://www.tiktok.com/@kilimora_adventure?_r=1&_t=ZS-92vfi2bYN0b"><i
+                            class="fab fa-tiktok fw-normal"></i></a>
                     <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle" href=""><i
                             class="fab fa-youtube fw-normal"></i></a>
                 </div>
@@ -127,7 +131,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <img src="img/logo_kilimora.png" alt="Tembea Africa Logo" width="100%">
+                <img src="img/logo1.png" alt="Tembea Africa Logo" width="100%">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -186,7 +190,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center">
-                                    <img src="img/logo_kilimora.png" alt="Kilimora Adventures" class="img-fluid"
+                                    <img src="img/logo1.png" alt="Kilimora Adventures" class="img-fluid"
                                         style="max-height: 250px; object-fit: contain;">
                                 </div>
                             </div>
@@ -726,7 +730,9 @@
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/share/1GWydnMmsK/?mibextid=wwXIfr"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social"
+                            href="https://www.facebook.com/share/1GWydnMmsK/?mibextid=wwXIfr"><i
+                                class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
