--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <img src="img/logo_kilimora.png" alt="Tembea Africa Logo" width="100%">
+                <img src="img/logo1.png" alt="Tembea Africa Logo" width="100%">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -143,7 +143,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center">
-                                    <img src="img/logo_kilimora.png" alt="Kilimora Adventures" class="img-fluid"
+                                    <img src="img/logo1.png" alt="Kilimora Adventures" class="img-fluid"
                                         style="max-height: 250px; object-fit: contain;">
                                 </div>
                             </div>
@@ -321,9 +321,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">About Us</h6>
+                    <h6 class="section-title bg-white text-start pe-3" style="color:#d4a017 !important;">About Us</h6>
                     <h1 class="mb-4"><span style="color: #4B2E18 !important;">About Kilimora Adventure</span></h1>
-                    <h5 class="mb-3 text-primary">Where Passion Meets the Wild</h5>
+                    <h5 class="mb-3" style="color: #d4a017;">Where Passion Meets the Wild</h5>
 
                     <p class="mb-4">
                         Kilimora Adventure is an emerging premier tour operator based in the heart of Arusha, Tanzania.
@@ -339,7 +339,7 @@
                         guests with more than just a tour, but a life-changing journey.
                     </p>
 
-                    <h5 class="mb-3 text-primary">Why Journey With Us?</h5>
+                    <h5 class="mb-3" style="color: #d4a017;">Why Journey With Us?</h5>
                     <p class="mb-4">
                         Since our inception, we have grown into one of Africa's premier safari operators by staying true
                         to our core values:
@@ -354,14 +354,14 @@
                             create genuine connections with the rich culture and natural beauty of Tanzania.</li>
                     </ul>
 
-                    <h5 class="mb-3 text-primary">Our Vision</h5>
+                    <h5 class="mb-3" style="color: #d4a017;">Our Vision</h5>
                     <p class="mb-4">
                         To become Tanzania's most trusted and innovative tour guide company, delivering authentic,
                         sustainable, and unforgettable travel experiences that showcase the nation's natural beauty,
                         rich wildlife, and vibrant cultural heritage to the world.
                     </p>
 
-                    <h5 class="mb-3 text-primary">Our Mission</h5>
+                    <h5 class="mb-3" style="color: #d4a017;">Our Mission</h5>
                     <p class="mb-4">
                         Our mission is to create memorable and responsible travel experiences in Tanzania through expert
                         guiding, personalized service, and a deep respect for nature, culture, and local communities.
@@ -408,7 +408,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-handshake text-primary fa-2x me-3"></i>
+                            <i class="fa fa-handshake fa-2x me-3" style="color: #d4a017;"></i>
                             <h5 class="fw-bold mb-0">Integrity & Trust</h5>
                         </div>
                         <p class="mb-0">
@@ -419,7 +419,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-star text-primary fa-2x me-3"></i>
+                            <i class="fa fa-star fa-2x me-3" style="color: #d4a017;"></i>
                             <h5 class="fw-bold mb-0">Excellence in Service</h5>
                         </div>
                         <p class="mb-0">
@@ -430,7 +430,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-leaf text-primary fa-2x me-3"></i>
+                            <i class="fa fa-leaf fa-2x me-3" style="color: #d4a017;"></i>
                             <h5 class="fw-bold mb-0">Sustainability & Conservation</h5>
                         </div>
                         <p class="mb-0">
@@ -441,7 +441,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-globe text-primary fa-2x me-3"></i>
+                            <i class="fa fa-globe fa-2x me-3" style="color: #d4a017;"></i>
                             <h5 class="fw-bold mb-0">Cultural Respect & Authenticity</h5>
                         </div>
                         <p class="mb-0">
@@ -452,7 +452,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-user-check text-primary fa-2x me-3"></i>
+                            <i class="fa fa-user-check fa-2x me-3" style="color: #d4a017;"></i>
                             <h5 class="fw-bold mb-0">Customer-Centered Approach</h5>
                         </div>
                         <p class="mb-0">
@@ -463,7 +463,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-hands-helping text-primary fa-2x me-3"></i>
+                            <i class="fa fa-hands-helping fa-2x me-3" style="color: #d4a017;"></i>
                             <h5 class="fw-bold mb-0">Community Empowerment</h5>
                         </div>
                         <p class="mb-0">
@@ -577,7 +577,8 @@
                 <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start pe-3" style="color:#d4a017 !important;">Leadership Team
                     </h6>
-                    <h1 class="mb-4">Diana – Deputy Director <span class="text-primary">| Kilimora Adventure</span></h1>
+                    <h1 class="mb-4">Diana – Deputy Director <span style="color: #d4a017;">| Kilimora Adventure</span>
+                    </h1>
 
                     <p class="lead mb-4" style="color: #4B2E18; font-weight: 600;">
                         Serving as Deputy Director and co-founder of Kilimora Adventure, Diana Thomas plays a key role
@@ -592,7 +593,7 @@
                     <div class="row g-4 mb-4">
                         <div class="col-md-6">
                             <div class="d-flex align-items-center">
-                                <div class="btn-lg-square bg-primary rounded-circle me-3">
+                                <div class="btn-lg-square rounded-circle me-3" style="background-color: #d4a017;">
                                     <i class="fa fa-tasks text-white user-select-none"></i>
                                 </div>
                                 <div>
@@ -603,7 +604,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="d-flex align-items-center">
-                                <div class="btn-lg-square bg-primary rounded-circle me-3">
+                                <div class="btn-lg-square rounded-circle me-3" style="background-color: #d4a017;">
                                     <i class="fa fa-heart text-white user-select-none"></i>
                                 </div>
                                 <div>
@@ -629,14 +630,14 @@
     <div class="container-xxl py-5 bg-light">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Our Fleet</h6>
+                <h6 class="section-title bg-white text-center px-3" style="color: #d4a017 !important;">Our Fleet</h6>
                 <h1 class="mb-5">Our Vehicles Features</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-wrench fa-3x text-primary mb-4"></i>
+                            <i class="fa fa-wrench fa-3x mb-4" style="color: #d4a017;"></i>
                             <h5>Spare Tires & Heavy-Duty Jack</h5>
                             <p>We carry two spare tires and a heavy-duty jack, essential for the rough terrains.</p>
                         </div>
@@ -645,7 +646,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-snowflake fa-3x text-primary mb-4"></i>
+                            <i class="fa fa-snowflake fa-3x mb-4" style="color: #d4a017;"></i>
                             <h5>Cooler Box</h5>
                             <p>All our vehicles have a small fridge to keep beverages cold throughout the day.</p>
                         </div>
@@ -654,7 +655,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-arrows-alt-h fa-3x text-primary mb-4"></i>
+                            <i class="fa fa-arrows-alt-h fa-3x mb-4" style="color: #d4a017;"></i>
                             <h5>Extended and Wider</h5>
                             <p>Extended body for more space to move and get the best photographic angles.</p>
                         </div>
@@ -663,7 +664,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-book fa-3x text-primary mb-4"></i>
+                            <i class="fa fa-book fa-3x mb-4" style="color: #d4a017;"></i>
                             <h5>Wild Life Books and Maps</h5>
                             <p>A set of books and guides about mammals and birds, plus maps of the area.</p>
                         </div>
@@ -672,7 +673,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-bolt fa-3x text-primary mb-4"></i>
+                            <i class="fa fa-bolt fa-3x mb-4" style="color: #d4a017;"></i>
                             <h5>Power Inverters</h5>
                             <p>110v and 220v power adapters to charge camera batteries on the go.</p>
                         </div>
@@ -681,7 +682,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-expand fa-3x text-primary mb-4"></i>
+                            <i class="fa fa-expand fa-3x mb-4" style="color: #d4a017;"></i>
                             <h5>Larger Windows</h5>
                             <p>Large windows for the best possible viewing experience.</p>
                         </div>
@@ -690,7 +691,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-arrow-up fa-3x text-primary mb-4"></i>
+                            <i class="fa fa-arrow-up fa-3x mb-4" style="color: #d4a017;"></i>
                             <h5>Pop Up Roof</h5>
                             <p>Roofs that pop up for standing views of the wildlife.</p>
                         </div>
@@ -699,7 +700,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-coffee fa-3x text-primary mb-4"></i>
+                            <i class="fa fa-coffee fa-3x mb-4" style="color: #d4a017;"></i>
                             <h5>Coffee Box</h5>
                             <p>Snacks, coffee, and tea available at any time during game drives.</p>
                         </div>
@@ -708,7 +709,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-medkit fa-3x text-primary mb-4"></i>
+                            <i class="fa fa-medkit fa-3x mb-4" style="color: #d4a017;"></i>
                             <h5>First Aid Kit</h5>
                             <p>Equipped for emergencies, with guides trained in their use.</p>
                         </div>
@@ -945,22 +946,22 @@
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3">Follow Us</h5>
                     <div class="d-flex gap-3 fs-4">
-                        <a href="https://www.facebook.com/share/1GWydnMmsK/?mibextid=wwXIfr"><i
+                        <a href="https://www.facebook.com/share/1GWydnMmsK/?mibextid=wwXIfr" style="color: #d4a017;"><i
                                 class="fab fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/kilimora.adventure?igsh=cjVjaTV4dTZzZXk2"><i
-                                class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-pinterest"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.tiktok.com/@kilimora_adventure?_r=1&_t=ZS-92vfi2bYN0b"><i
-                                class="fab fa-tiktok"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-x-twitter"></i></a>
+                        <a href="https://www.instagram.com/kilimora.adventure?igsh=cjVjaTV4dTZzZXk2"
+                            style="color: #d4a017;"><i class="fab fa-instagram"></i></a>
+                        <a href="#" style="color: #d4a017;"><i class="fab fa-pinterest"></i></a>
+                        <a href="#" style="color: #d4a017;"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.tiktok.com/@kilimora_adventure?_r=1&_t=ZS-92vfi2bYN0b"
+                            style="color: #d4a017;"><i class="fab fa-tiktok"></i></a>
+                        <a href="#" style="color: #d4a017;"><i class="fab fa-linkedin"></i></a>
+                        <a href="#" style="color: #d4a017;"><i class="fab fa-x-twitter"></i></a>
                     </div>
                 </div>
 
             </div>
 
-            <div class="text-center mt-4 py-3" style="color:#777;">
+            <div class="text-center mt-4 py-3" style="color:#4B2E18;">
                 © 2025 Kilimora Adventures — All Rights Reserved
             </div>
 
