--- a/destination-ngorongoro.html
+++ b/destination-ngorongoro.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Serengeti National Park - Kilimora Adventures</title>
+    <title>Ngorongoro Conservation Area - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords">
-    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
+    <meta content="Ngorongoro, Crater, Safari, Tanzania, Wildlife" name="keywords">
+    <meta content="Explore the Ngorongoro Crater, a UNESCO World Heritage Site and natural wonder of Africa."
         name="description">
 
     <!-- Favicon -->
@@ -340,7 +340,8 @@
         </nav>
     </div>
 
-    <div class="container-fluid bg-primary py-5 mb-5 hero-header">
+    <div class="container-fluid bg-primary py-5 mb-5 hero-header"
+        style="background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(img/ngo.jpg); background-position: center center; background-repeat: no-repeat; background-size: cover;">
         <div class="container py-5">
             <div class="row justify-content-start py-5">
                 <div class="col-lg-6 pt-lg-5 mt-lg-5 text-start">
@@ -348,9 +349,8 @@
                         DESTINATIONS</h6>
                     <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">NGORONGORO</h1>
                     <p class="fs-6 text-white mb-4 animated slideInDown">
-                        Experience Ngorongoro, where the Great Migration roams wild, the sands of Zanzibar beckon, and
-                        the
-                        majestic Mount Kilimanjaro rises above it all.
+                        Discover the Ngorongoro Crater, the world's largest inactive volcanic caldera and a UNESCO World
+                        Heritage Site teeming with incredible wildlife.
                     </p>
                 </div>
             </div>
@@ -374,16 +374,16 @@
                     <div class="h-100">
                         <div class="d-flex align-items-center mb-4">
                             <span class="section-title-line"></span>
-                            <h2 class="mb-0">About Serengeti</h2>
+                            <h2 class="mb-0">About Ngorongoro</h2>
                         </div>
-                        <p class="mb-4">The Serengeti National Park is a Tanzanian national park in the Serengeti
-                            ecosystem in the Mara and Simiyu regions. It is famous for its annual migration of over 1.5
-                            million white-bearded (or brindled) wildebeest and 250,000 zebra and for its numerous Nile
-                            crocodile and honey badger.</p>
-                        <p class="mb-4">It is one of the Seven Natural Wonders of Africa. The park covers 14,750 square
-                            kilometres (5,700 sq mi) of grassland plains, savanna, riverine forest, and woodlands. The
-                            park lies in northwestern Tanzania, bordered to the north by the Kenyan border, where it is
-                            continuous with the Maasai Mara National Reserve.</p>
+                        <p class="mb-4">The Ngorongoro Conservation Area is a UNESCO World Heritage Site located in
+                            northern Tanzania. At its heart lies the Ngorongoro Crater, the world's largest inactive,
+                            intact volcanic caldera, formed when a giant volcano exploded and collapsed on itself some
+                            2-3 million years ago.</p>
+                        <p class="mb-4">The crater floor covers 260 square kilometers (100 square miles) and is home to
+                            approximately 25,000 large animals, including the highest density of predators in Africa. It
+                            is one of the few places where you can see the endangered black rhinoceros in their natural
+                            habitat, making it a prime destination for witnessing the Big Five.</p>
                     </div>
                 </div>
             </div>
@@ -400,9 +400,9 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="icon-box text-center">
-                        <i class="fa fa-paw"></i>
-                        <h5>The Great Migration</h5>
-                        <p class="mb-0">Witness millions of wildebeest and zebra on their annual trek.</p>
+                        <i class="fa fa-mountain"></i>
+                        <h5>The Crater Floor</h5>
+                        <p class="mb-0">Descend 600m into the world's largest intact volcanic caldera.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -415,8 +415,8 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="icon-box text-center">
                         <i class="fa fa-globe"></i>
-                        <h5>Endless Plains</h5>
-                        <p class="mb-0">Vast savannas that stretch as far as the eye can see.</p>
+                        <h5>UNESCO World Heritage</h5>
+                        <p class="mb-0">A protected area of outstanding universal value.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
@@ -442,7 +442,7 @@
         <div class="container">
             <div class="d-flex align-items-center mb-5">
                 <span class="section-title-line"></span>
-                <h2 class="mb-0">Experience Serengeti's Top Tours</h2>
+                <h2 class="mb-0">Experience Ngorongoro's Top Tours</h2>
             </div>
             <div class="owl-carousel testimonial-carousel">
                 <!-- Tour Item 1 -->
